--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -186,7 +186,7 @@
       {% endif %}
     </table>
     {% if ano == 0 or semestre == 0 %}
-      <small>estudantes reprovados contam mais de uma vez</small>
+      <small>estudantes reprovados e do PFE avançado contam mais de uma vez</small>
     {% endif %}
     <br>
 
