--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -121,8 +121,11 @@
             <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
               {% if alocado.get_notas %}
                 Notas: 
-                {% for aval, nota, peso in alocado.get_notas %}
-                  <span style="background-color:#eef;">{{aval}}({% widthratio peso 1 100 %}%)={{nota|floatformat:1}}</span>
+                {% for aval, nota, peso, descr in alocado.get_notas %}
+                  <span style="background-color:#eef;" data-toggle="tooltip" data-html="true" animation="true" 
+                   title="{{descr}}">
+                    {{aval}}({% widthratio peso 1 100 %}%)={{nota|floatformat:1}}
+                  </span>
                 {% endfor %}
                 &nbsp;|
               {% endif %}
