--- a/estudantes/templates/estudantes/selecao_propostas.html
+++ b/estudantes/templates/estudantes/selecao_propostas.html
@@ -6,6 +6,10 @@
 {% endcomment %}
 
 {% block head %}
+
+<style>
+table { width: inherit !important; }
+</style>
 {% endblock %}
 
 {% block content %}
@@ -27,11 +31,12 @@
     {% if propostas %}
       <form action="" method="post"> {% csrf_token %}
         {% if liberadas_propostas %}
-          <table>
+          <table  class="table table-hover table-bordered  table-sm ">
+            <tbody>
             {% for proposta in propostas %} 
               {% if proposta.disponivel %}
                 <tr>
-                  <td>
+                  <th scope="row" class="align-middle">
                     <select id="selection{{proposta.pk}}" name="selection{{proposta.pk}}" 
                     {% if vencido %}disabled{% endif %}></select>
                     <script type="text/javascript">
@@ -49,7 +54,7 @@
                       {% endfor %}
 
                     </script>
-                  </td>
+                  </th>
                   <td>
                     <a href="{% url 'proposta_detalhes' proposta.pk %}">
                       {% if proposta.titulo %}
@@ -71,6 +76,7 @@
                 </tr>
               {% endif %}
             {% endfor %}
+            </tbody>
           </table>
           <p>&nbsp;</p>
         {% else %}
@@ -80,12 +86,16 @@
         <font color="red">
           {{warnings|linebreaks}}
         </font>
-        
-        <input type="submit" value="Enviar" {% if vencido or not liberadas_propostas %}disabled{% endif %}>
 
-        <small><font color="red">
-          Selecione ao menos 5 propostas de projetos (1 ao 5), sendo 1 para a que você tem mais interesse.
-        </font></small>
+        <div style="display: flex;">      
+          
+          <input type="submit" style="margin-right: 14px;" value="Enviar" {% if vencido or not liberadas_propostas %}disabled{% endif %}>
+
+          <small style="float: right;"><font color="red">
+            Selecione ao menos 5 propostas de projetos (1 ao 5), sendo 1 para a que você tem mais interesse.
+          </font></small>
+          
+        </div>
 
         <p>&nbsp;</p>
         <p>&nbsp;</p>
