--- a/estudantes/templates/estudantes/informacoes_adicionais.html
+++ b/estudantes/templates/estudantes/informacoes_adicionais.html
@@ -33,7 +33,7 @@ textarea {
   <form action="" method="post"> {% csrf_token %}  
 
     <label for="trabalhou">
-    Você já trabalhou e/ou estagiou em alguma empresa de engenharia?<br>
+    Você já trabalhou/trabalha ou estagiou/estagia em alguma empresa de engenharia?<br>
     Se sim, qual/quais?
     </label><br>
     <textarea id="trabalhou" name="trabalhou" rows="4" cols="80" maxlength="1000" {% if vencido %}disabled{% endif %}>{% if trabalhou %}{{trabalhou}}{% endif %}</textarea>
